2014-05-06  Roland Winkler  <winkler@gnu.org>
	Allow arbitrary lisp expressions as values of xfields.
	* lisp/bbdb.el (bbdb-record-type): Update accordingly.
	(bbdb-string-trim): New optional arg null.
	(bbdb-record-xfield-intern): Return xfield value unmodified if it
	is not a string.
	(bbdb-record-xfield-string): New function.
	(bbdb-record-xfield-split): Throw error if xfield value is not a
	string.
	(bbdb-record-set-xfield, bbdb-record-set-field)
	(bbdb-merge-xfield, bbdb-display-record-one-line)
	(bbdb-display-record-multi-line)
	* lisp/bbdb-com.el (bbdb-search, bbdb-read-field)
	(bbdb-edit-field, bbdb-read-xfield): Allow xfield values that are
	not a string.
	(bbdb-add-mail-alias): Simplify.

2014-05-06  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-parse-postcode): Finish immediately if one
	test succeeds.

2014-04-27  Roland Winkler  <winkler@gnu.org>
	* configure.ac: Increase BBDB version number to 3.1.2.
	* NEWS: Update for release.

2014-04-12  Roland Winkler  <winkler@gnu.org>
	Be more careful that empty strings do not pollute the data base.
	* lisp/bbdb.el (bbdb-list-strings): New function.
	(bbdb-record-set-field): Use it.
	(bbdb-record-set-xfield): Clean up.
	* lisp/bbdb-com.el (bbdb-fix-records): New command.
	(bbdb-read-organization, bbdb-complete-mail): Check emacs version
	properly.

2014-04-12  Roland Winkler  <winkler@gnu.org>
	Check type of record data structures more carefully.
	* lisp/bbdb.el (bbdb-check-type): Simplify.  New arg `extended'.
	* lisp/bbdb-com.el (bbdb-create-internal): Bug fix.

2014-04-12  Barak A. Pearlmutter  <barak@cs.nuim.ie>
	* lisp/Makefile.am: Include makefile-temp in distribution.

2014-04-12  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-site.el.in: Be more verbose about what we want.

2014-04-12  Roland Winkler  <winkler@gnu.org>
	* lisp/makefile-temp: Obey proper dependencies.  Clean up.

2014-04-12  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-vm.el, m4/emacs_vm.m4: Require vm-autoloads.
